# aiowinfile

./: .gitignore  CHANGES.md  CHANGES_CN.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README_CN.md  README_EN.md  build.bat  build_it.bat  build_it.py  fair_comparison_report.html  pyproject.toml  run_benchmark.py  run_betchmark.py  setup.py  test_base.py  test_loguru.py  test_speed.py  test_wrap_fd.py
.claude/: settings.local.json
.github/workflows/: build_wheel_ci.yml  release.yml  test.yml
aiowinfile/: __init__.py
ayafileio/: __init__.py  _async_file.py  _cleanup.py  _compat.py  _config.py  _open.py  _wrap.py  util.py
src/: bindings.cpp  config.hpp  debug_log.hpp  file_handle.cpp  file_handle.hpp  global_thread_pool.cpp  global_thread_pool.hpp  globals.cpp  globals.hpp  handle_pool.cpp  handle_pool.hpp  handle_pool_posix.cpp  io_backend.hpp  io_request.hpp  iocp.cpp  iocp.hpp  loop_handle.cpp  loop_handle.hpp  pool.cpp  pool.hpp  uring_globals.cpp  uring_pool.hpp
src/backends/: io_uring_backend.cpp  io_uring_backend.hpp  linux_io_backend.cpp  linux_io_backend.hpp  macos_gcd_backend.cpp  macos_gcd_backend.hpp  thread_io_backend.cpp  thread_io_backend.hpp  windows_io_backend.cpp  windows_io_backend.hpp
src/utils/: error_util.hpp  file_mode.hpp
test/: __init__.py  benchmark.py  config.py  metrics.py  reporter.py
